# offline-rl-psycho

./: README.md  pyproject.toml
configs/: config.yaml  train_dqn.yaml
configs/algo/: dqn.yaml  dqn_cnn.yaml
configs/env/: big_L.yaml  big_cross.yaml  diamond.yaml  peg4x4.yaml  peg7x7.yaml  tiny_cross.yaml
configs/eval/: default.yaml
configs/paths/: default.yaml
configs/train/: default.yaml
doc/: 25_08_23_rl4psycho.md  25_09_03_smallest_implementation.md  25_09_05_process.md
scripts/: estimate_beta_q.sh  estimation_debug.py  eval_beta_recovery.py  gen_big_L.sh  gen_big_cross.sh  gen_diamond.sh  gen_peg4x4.sh  gen_peg7x7.sh  gen_tiny_cross.sh  if_analysis.py  plot_if_analysis.py  render_plots.sh  run_big_L.sh  run_big_cross.sh  run_diamond.sh  run_peg4x4.sh  run_peg4x4_cnn.sh  run_peg7x7.sh  run_tiny_cross.sh
src/mdpmm/: __init__.py
src/mdpmm/envs/: __init__.py
src/mdpmm/envs/peg/: boards.py  peg_env.py
src/mdpmm/inference/: cli.py  diagnostics.py  estimate_beta_q.py  eval_beta.py  generate.py  plots.py  stats.py
src/mdpmm/models/: dqn.py
src/mdpmm/training/: __init__.py  hydra_train.py  train.py
src/mdpmm/utils/: config.py  io.py  logging.py  seeding.py
tests/: conftest.py  test_boards.py  test_dqn_cnn_smoke.py  test_dqn_smoke.py  test_estimate_beta_q.py  test_eval_beta_recovery.py  test_generation_softmax.py  test_metrics_parsing.py  test_peg4_env.py  test_peg_env.py  test_reward_shaping.py  test_stats_basic.py
